fix horizontal scroll

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,10 @@ $navbar-default-bg: black;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+html{
+  overflow-x:hidden;
+}
+
 #logo{
   float:left;
   font-size: 1.7em;
